# techchallenge01

./: .gitignore  README.md  docker-compose.yml  dockerfile  entrypoint_app.sh  main.py  pyproject.toml  render.yaml  requirements.txt
Classes/: Enums.py  Produto.py  producaobase.py
Model/: Comercializacao.py  Exportacao.py  Importacao.py  Processamento.py  Producao.py
Util/: Contantes.py  RestAPI.py  Security.py  WebScraping.py  inserirdadosexemplo.py  tabelapostgre.py
app/: main.py
app/api/dependencies/: authentication.py
app/api/routes/: api.py  authentication.py  users.py
app/database/: db.py  first_migration.py
app/resources/: config.py
app/schemas/: user.py
app/services/: jwt.py
db_server_docker/: createDB.sql  entrypoint.sh  postgres.dockerfile  sqlserver.dockerfile
sql/: connection.py  connection_string.py  crud.py  database.py  models.py  schemas.py
sqlserver_docker/: configure-db.sh  setup.sql  sqlserver.dockerfile
